Added nib and made iframes max-width 100%

--- a/website/css/framework.styl
+++ b/website/css/framework.styl
@@ -1,6 +1,7 @@
 @import 'normalize.css'
 // Enable/disable bootstrap elements in bootstrap/index.styl
 @import bootstrap
+@import nib
 @import typography
 @import elements
 
@@ -19,7 +20,7 @@ input, textarea
     color #000
 .placeholder
     color #aaa
-img, video, audio, embed, object, input
+img, video, audio, embed, object, input, iframe
     max-width 100%
 
 /////////////////
