Added default styling for ChromeFrame

--- a/website/css/framework.styl
+++ b/website/css/framework.styl
@@ -1,8 +1,6 @@
 @import 'normalize.css'
-// Enable/disable bootstrap elements in bootstrap/index.styl
-// @import bootstrap
-@import nib
-@import typography
+@import 'nib/gradients'
+@import 'nib/vendor'
 
 bs()
     -moz-box-sizing border-box
