Removed Bootstrap completely. Added buttons
Need to fine-tune buttons

--- a/website/css/jeet/typography.styl
+++ b/website/css/jeet/typography.styl
@@ -1,11 +1,12 @@
 // Settings
 link_color = #4a689a
+base_font_size = 14px
 
 
 // Generic Typography
 typo()
-    font-size 13px
-    line-height 1.6
+    font-size base_font_size
+    line-height 1.5
     a
         color link_color
         &:hover
