--- a/website/css/style.styl
+++ b/website/css/style.styl
@@ -1,6 +1,7 @@
-@import framework
-@import elements
-@import typography
+@import 'jeet/framework'
+@import 'jeet/elements'
+@import 'jeet/typography'
+
 
 
 
