Added shadow() and .last class
Syntax: shadow(width, box-shadow params)

--- a/website/css/jeet/framework.styl
+++ b/website/css/jeet/framework.styl
@@ -20,7 +20,9 @@ input, textarea
 img, video, audio, embed, object, input, iframe
     max-width 100%
 last()
-    margin-right 0
+    margin-right 0 !important
+.last
+    last()
 
 /////////////////
 // Semantic.gs // for Stylus: http://learnboost.github.com/stylus/
