--- a/website/css/jeet/elements.styl
+++ b/website/css/jeet/elements.styl
@@ -30,3 +30,21 @@ btn(bg_color = #eee, radius = 10px, style = flat)
         background linear-gradient(top, lighten(bg_color, 8%) 50%, darken(bg_color, 8%) 50%)
     &:hover
         opacity(.9)
+
+// Shadow
+shadow(w = 90%, args...)
+    position relative
+    &:before, &:after
+        content ''
+        position absolute
+        z-index -1
+    &:before
+        display block !important
+        bottom 0
+        left 0
+        right 0
+        margin auto
+        border-radius 999px
+        width w
+        height 0
+        box-shadow(args)
