--- a/website/css/jeet/framework.styl
+++ b/website/css/jeet/framework.styl
@@ -20,9 +20,7 @@ input, textarea
 img, video, audio, embed, object, input, iframe
     max-width 100%
 last()
-    margin-right 0 !important
-.last
-    last()
+    margin-right 0
 
 /////////////////
 // Semantic.gs // for Stylus: http://learnboost.github.com/stylus/
