col() and span() center now work in IE7

--- a/website/css/jeet/framework.styl
+++ b/website/css/jeet/framework.styl
@@ -70,6 +70,7 @@ col(x, center = false, columns = columns)
     if (center == c)
         float none
         display inline-block
+        *display inline
         margin-right auto
         margin auto
         *margin-right auto
@@ -88,6 +89,7 @@ span(x, center = false, columns = columns)
     if (center == c)
         float none
         display inline-block
+        *display inline
         margin auto
         *margin auto
 center(width = max_width)
