--- a/website/css/jeet/elements.styl
+++ b/website/css/jeet/elements.styl
@@ -14,6 +14,7 @@ btn(bg_color = #eee, radius = 10px, style = flat)
     background bg_color
     border-radius(radius)
     cursor pointer
+    text-align center
     if dark(bg_color)
         box-shadow inset 0 1px 0 rgba(255,255,255,.2)
         border 1px solid saturate(darken(bg_color, 15%), 15%)
