--- a/website/css/jeet/elements.styl
+++ b/website/css/jeet/elements.styl
@@ -15,6 +15,7 @@ btn(bg_color = #eee, radius = 10px, style = flat)
     border-radius(radius)
     cursor pointer
     text-align center
+    text-decoration none
     if dark(bg_color)
         box-shadow inset 0 1px 0 rgba(255,255,255,.2)
         border 1px solid saturate(darken(bg_color, 15%), 15%)
