--- a/website/css/jeet/elements.styl
+++ b/website/css/jeet/elements.styl
@@ -1,5 +1,6 @@
 // Reusable Custom Elements
 .chromeframe
+    background #fff
     background linear-gradient(top, #fff, #eee)
     border-bottom 1px solid #ddd
     box-shadow inset 0 -1px 0 #fff
