--- a/web/css/jeet/goodies.styl
+++ b/web/css/jeet/goodies.styl
@@ -1,17 +1,15 @@
-// Reusable Custom Elements
-.chromeframe
-    background #fff
-    background linear-gradient(top, #fff, #eee)
-    border-bottom 1px solid #ddd
-    box-shadow inset 0 -1px 0 #fff
-    text-shadow 0 1px 0 #fff
-    p
-        center()
-        padding 30px 0
-        text-align center
+// Clearfix - http://nicolasgallagher.com/micro-clearfix-hack
+cf()
+    *zoom 1
+    &:before, &:after
+        content ""
+        display table
+    &:after
+        clear both
 
 // Buttons
 btn(bg_color = #eee, radius = 10px, style = flat)
+    display inline-block
     background bg_color
     border-radius(radius)
     cursor pointer
@@ -33,9 +31,13 @@ btn(bg_color = #eee, radius = 10px, style = flat)
         background linear-gradient(top, lighten(bg_color, 8%) 50%, darken(bg_color, 8%) 50%)
     &:hover
         opacity(.9)
+        if dark(bg_color)
+            color lighten(bg_color, 90%)
+        if light(bg_color)
+            color darken(bg_color, 80%)
 
 // Shadow
-shadow(w = 90%, args...)
+shadow(w = 50%, args...)
     position relative
     &:before, &:after
         content ''
@@ -50,13 +52,22 @@ shadow(w = 90%, args...)
         border-radius 999px
         width w
         height 0
-        box-shadow(args)
+        box-shadow(0 -4em 4em 4em rgba(0,0,0,.3))
+        if (args)
+            box-shadow(args)
+            border-bottom 10px solid blue
 
-// Vertical (and Horizontal) Centering for Chrome, Opera, Maxthon as of 1/13
-vc()
-    display -webkit-flex
-    display flex
-    -webkit-justify-content center
-    justify-content center
-    -webkit-align-items center
-    align-items center
+// ChromeFrame for IE6, 7, 8 
+.chromeframe
+    width 100%
+    background #fff
+    background linear-gradient(top, #fff, #eee)
+    border-bottom 1px solid #ddd
+    box-shadow inset 0 -1px 0 #fff
+    text-shadow 0 1px 0 #fff
+    p
+        center()
+        padding 30px 0
+        text-align center
+        a
+            color #3a95fb
