Fixed some junk

--- a/web/css/jeet/goodies.styl
+++ b/web/css/jeet/goodies.styl
@@ -9,6 +9,7 @@ cf()
 
 // Buttons
 btn(bg_color = #eee, radius = 10px, style = flat)
+    bs()
     display inline-block
     background bg_color
     border-radius(radius)
@@ -69,5 +70,6 @@ shadow(w = 50%, args...)
         center()
         padding 30px 0
         text-align center
+        margin-bottom 0
         a
             color #3a95fb
