--- a/web/css/jeet/framework.styl
+++ b/web/css/jeet/framework.styl
@@ -59,13 +59,8 @@ span(x, center = f)
     cf()
     display inline
     float left
-    width total-width * ((((gutter-width + column-width ) * x) - gutter-width) / _gridsystem-width)
-    padding-left total-width * ( (gutter-width * 0.5) / _gridsystem-width)
-    padding-right total-width * ( (gutter-width * 0.5) / _gridsystem-width)
-    *width total-width * ((((gutter-width + column-width ) * x) - gutter-width) / _gridsystem-width)-correction
-    *padding-left total-width * ( (gutter-width * 0.5) / _gridsystem-width)-correction
-    *padding-right total-width * ( (gutter-width * 0.5) / _gridsystem-width)-correction
-    box-sizing(content-box)
+    width total-width * ((((gutter-width + column-width ) * x)) / _gridsystem-width)
+    *width total-width * ((((gutter-width + column-width ) * x)) / _gridsystem-width)-correction
     *behavior url(js/vendor/boxsizing.htc)
     if (center == c)
         float none
