--- a/web/css/jeet/settings.styl
+++ b/web/css/jeet/settings.styl
@@ -1,6 +1,6 @@
 // Grid
-column-width = 30px
-gutter-width = 30px
+column_width = 30px
+gutter_width = 30px
 columns = 24
 
 // center(max_width, max_width_padding) Defaults
