Organizing the project a bit better
Deleted the palette.psd as I rarely used it so I'm sure no one else
did. Reorganized the entire folder structure to give the Stylus and
SCSS port their own directories. Updated README.

--- a/web/css/stylus/jeet/framework.styl
+++ b/web/css/stylus/jeet/framework.styl
@@ -1,4 +1,4 @@
-@import 'jeet/normalize.css'
+@import '../common/normalize.css'
 @import 'nib/gradients'
 @import 'nib/vendor'
 @import 'jeet/settings'
