--- a/web/css/scss/jeet/_typography.scss
+++ b/web/css/scss/jeet/_typography.scss
@@ -1,26 +1,26 @@
-html{
-  font-size: $base_font_size;
-  line-height: 1.5;
-  font-family: Arial, "Halvetica Neue", Halvetica, sans-serif;
+html {
+    font-size: $base_font_size;
+    line-height: 1.5;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
-h1, h2, h3, h4, h5, h6{
-  line-height: 1.1;
-  margin-top: 0;
-  margin-bottom: .25em;
+h1, h2, h3, h4, h5, h6 {
+    line-height: 1.1;
+    margin-top: 0;
+    margin-bottom: .25em;
 }
-p{
-  margin-top: 0;
-  margin-bottom: $base_font_size * 2;
+p {
+    margin-top: 0;
+    margin-bottom: $base_font_size * 2;
 }
-a{
-  color: $link_color;
-  img{
-    display: block;
-  }
-  &:hover{
-    color: darken($link_color, 25%);
-  }
+a {
+    color: $link_color;
+    img {
+        display: block;
+    }
+    &:hover {
+        color: darken($link_color, 25%);
+    }
 }
-input, textarea{
-  color: #000;
+input, textarea {
+    color: #000;
 }
