--- a/web/css/styl/jeet/framework.styl
+++ b/web/css/styl/jeet/framework.styl
@@ -94,3 +94,54 @@ bp(w = 705px, mobile_first = false)
         unquote("@media all and (max-width: " + w + ") {")
 endbp()
     unquote("}")
+w(numerator = 1, denominator = 1, span = f, center = f, last = l)
+    x = (numerator / denominator) * columns
+    cf()
+    display inline
+    float left
+    width total_width * ((((gutter_width + column_width ) * x) - gutter_width) / (gridsystem_width - gutter_width))
+    margin-right (total_width * ( (gutter_width * 0.5) / (gridsystem_width - gutter_width))) * 2
+    *width total_width * ((((gutter_width + column_width ) * x) - gutter_width) / gridsystem_width) - (correction * 2)
+    *margin-right (total_width * ( (gutter_width * 0.5) / gridsystem_width)-correction) * 2
+    &:last-child
+        last()
+    if (span = span)
+        width total_width * ((((gutter_width + column_width ) * x)) / gridsystem_width)
+        *width total_width * ((((gutter_width + column_width ) * x)) / gridsystem_width)-correction
+        *behavior url(js/vendor/boxsizing.htc)
+        margin-right 0 
+    if (center == c)
+        float none !important
+        display block !important
+        margin-right auto !important
+        margin-left auto !important
+        *margin-right auto !important
+        *margin-left auto !important
+    if (last == f)
+        &:last-child
+            margin-right (total_width * ( (gutter_width * 0.5) / (gridsystem_width - gutter_width))) * 2
+            *margin-right (total_width * ( (gutter_width * 0.5) / gridsystem_width)-correction) * 2
+.full
+    w()
+.half
+    w(1, 2)
+.third
+    w(1, 3)
+.fourth
+    w(1, 4)
+.fifth
+    w(1, 5)
+.sixth
+    w(1, 6)
+.seventh
+    w(1, 7)
+.eigth
+    w(1, 8)
+.ninth
+    w(1, 9)
+.tenth
+    w(1, 10)
+.eleventh
+    w(1, 11)
+.twelfth
+    w(1, 12)
