--- a/web/css/scss/jeet/_framework.scss
+++ b/web/css/scss/jeet/_framework.scss
@@ -119,3 +119,77 @@ $unit: ($total_width * ( ($gutter_width * 0.5) / ($gridsystem_width - $gutter_wi
         @media all and (min-width: $w){@content};
     }
 }
+
+@mixin w($numerator: 1, $denominator: 1, $span: f, $center: f, $last: l) {
+    $x: ($numerator / $denominator) * $columns;
+    @include cf;
+    display: inline;
+    float: left;
+    width: $total_width * (((($gutter_width + $column_width ) * $x) - $gutter_width) / ($gridsystem_width - $gutter_width));
+    margin-right: ($total_width * ( ($gutter_width * 0.5) / ($gridsystem_width - $gutter_width))) * 2;
+    *width: $total_width * (((($gutter_width + $column_width ) * $x) - $gutter_width) / $gridsystem_width) - ($correction * 2);
+    *margin-right: ($total_width * (( $gutter_width * 0.5 ) / $gridsystem_width) - $correction) * 2;
+    &:last-child {
+        @include last;
+    }
+
+    @if $span == s {
+        width: $total_width * (((($gutter_width + $column_width ) * $x)) / $gridsystem_width);
+        *width: $total_width * (((($gutter_width + $column_width ) * $x)) / $gridsystem_width)-$correction;
+        *behavior: url(js/vendor/boxsizing.htc);
+        margin-right: 0;
+    }
+
+    @if $center == c {
+        float: none !important;
+        display: block !important;
+        margin-right: auto !important;
+        margin-left: auto !important;
+        *margin-right: auto !important;
+        *margin-left: auto !important;
+    }
+
+    @if $last == f {
+        &:last-child {
+            margin-right: ($total_width * ( ($gutter_width * 0.5) / ($gridsystem_width - $gutter_width))) * 2;
+            *margin-right: ($total_width * ( ($gutter_width * 0.5) / $gridsystem_width)-$correction) * 2;
+        }
+    }
+}
+
+.full {
+    @include w();
+}
+.half {
+    @include w(1, 2);
+}
+.third {
+    @include w(1, 3);
+}
+.fourth {
+    @include w(1, 4);
+}
+.fifth {
+    @include w(1, 5);
+}
+.sixth {
+    @include w(1, 6);
+}
+.seventh {
+    @include w(1, 7);
+}
+.eigth {
+    @include w(1, 8);
+}
+.ninth {
+    @include w(1, 9);
+}
+.tenth {
+    @include w(1, 10);
+}
+.eleventh {
+    @include w(1, 11);
+}
+.twelfth {
+    @include w(1, 12);
+}
