Updated the holy crap out of the README

--- a/web/css/styl/jeet/framework.styl
+++ b/web/css/styl/jeet/framework.styl
@@ -87,7 +87,7 @@ stack(align = c)
         text-align left
     if (align == r)
         text-align right
-bp(w = 705px, mobile_first = false)
+bp(w = 705px, mobile_first = f)
     if (mobile_first == mf)
         unquote("@media all and (min-width: " + w + ") {")
     else
