Fixed w() - last param forgot comma. Fixed w()'s centering function - forgot the !importants. Updated doc.

--- a/web/css/scss/jeet/_framework.scss
+++ b/web/css/scss/jeet/_framework.scss
@@ -146,10 +146,10 @@ $unit: ($total_width * ( ($gutter_width * 0.5) / ($gridsystem_width - $gutter_wi
     @if $center == c {
         float: none;
         display: block;
-        margin-right: auto;
-        margin-left: auto;
-        *margin-right: auto;
-        *margin-left: auto;
+        margin-right: auto !important;
+        margin-left: auto !important;
+        *margin-right: auto !important;
+        *margin-left: auto !important;
     }
     @else {
         float: left;
