--- a/web/css/styl/jeet/framework.styl
+++ b/web/css/styl/jeet/framework.styl
@@ -93,7 +93,7 @@ bp(w = 705px, mobile_first = f)
         unquote("@media all and (max-width: " + w + ") {")
 endbp()
     unquote("}")
-w(numerator = 1, denominator = 1, span = f, center = f last = l)
+w(numerator = 1, denominator = 1, span = f, center = f, last = l)
     x = (numerator / denominator) * columns
     cf()
     if (span == f) (center == f)
@@ -112,10 +112,10 @@ w(numerator = 1, denominator = 1, span = f, center = f last = l)
     if (center == c)
         float none
         display block
-        margin-right auto
-        margin-left auto 
-        *margin-right auto 
-        *margin-left auto 
+        margin-right auto !important
+        margin-left auto !important
+        *margin-right auto !important
+        *margin-left auto !important
     else
         float left
         display inline
